Fix z-index problem on Movies component, hovered movies are no longer displayed in front of the header component

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -4,6 +4,7 @@
   justify-content: center;
 
   position: fixed;
+  z-index: 2;
   top: 0;
   left: 0;
 
